<resources>
    <string name="app_name">BodyFitness</string>
    <string name="welcome">Welcome To \nBody Fitness</string>
    <string name="slogan">Let\'s sweat, inspire, and \ntransform together!</string>
    <string name="start_button">Start your fitness \n adventure now</string>
    <string name="running_logo">running_logo</string>
    <string name="signup_here"><u>Didn’t have account Signup here</u></string>
    <string name="login_here"><u>Already have account Login here</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hintEmail">eg: ravi01@gmail.com</string>
    <string name="hintPassword">(Numeric only)</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Continue</string>
    <string name="_hint">RAVI KUMAR</string>
    <string name="hi_please_login">Hi, \nPlease Login</string>
    <string name="create_account">Create \nAccount</string>
    <string name="account_setup">Account \nSetup</string>
    <string name="wave">wave</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="goal">Goal</string>
    <string name="finish">Finish</string>
    <string name="in_years">(in years)</string>
    <string name="in_kg">(in Kg)</string>
    <string name="male_icon">Male Icon</string>
    <string name="female_icon">Female Icon</string>
    <string name="aryan_raj">Aryan Raj</string>
    <string name="select_goal">Select Goal</string>
    <string name="muscle_gain">Muscle Gain</string>
    <string name="fat_loss">Fat Loss</string>
    <string name="maintain_muscle">Maintain Muscle</string>
    <string name="get_started">Get Started</string>
    <string name="muscle_gain_img">Muscle Gain</string>
    <string name="fat_loss_img">Fat Loss</string>
    <string name="muscle_maintain_img">Muscle Maintain</string>
    <string name="select_your_exercise">Select Your Exercise</string>
    <string name="chest_workout">Chest Workout</string>
    <string name="day_monday">Day: Monday</string>
    <string name="time">01:00 HRS</string>
    <string name="chest_muscle">Chest Muscle</string>
    <string name="go">Go</string>
    <string name="back_workout">Back Workout</string>
    <string name="day_tuesday">day: Tuesday</string>
    <string name="day_wednesday">day: Wednesday</string>
    <string name="day_thursday">day: Thursday</string>
    <string name="day_friday">day: Friday</string>
    <string name="day_saturday">day: Saturday</string>
    <string name="shoulder_workout">SHOULDER workout</string>
    <string name="arms_workout">Arms workout</string>
    <string name="legs_workout">Leg workout</string>
    <string name="abs_workout">ABS workout</string>
    <string name="push_up">Push Up</string>
    <string name="dumbbell_bench_press">Dumbbell Bench Press</string>
    <string name="_12_x_3">12 rep x 3 sets</string>
    <string name="incline_dumbbell_bench_press">Incline Dumbbell Bench Press</string>
    <string name="dumbbell_flyes">Dumbbell Flyes</string>
    <string name="chest_dips">Chest Dips</string>
    <string name="_10_x_3">10 rep x 3 sets</string>
    <string name="decline_dumbbell_bench_press">Decline Dumbbell Bench Press</string>
    <string name="how_to_do_this">How to do this</string>
    <string name="push_up_procedure">
        <b>Position:</b> Start in a plank position with your hands placed slightly wider than shoulder-width apart.\n
        <b>Alignment:</b> Ensure your body forms a straight line from head to heels, engaging your core muscles.\n
        <b>Descent:</b> Lower your chest toward the ground by bending your elbows, keeping them close to your body.\n
        <b>Push:</b> Push back up to the starting position by straightening your arms. Keep your body in a straight line throughout.\n
        <b>Repeat:</b> Perform the movement for the desired number of repetitions, maintaining proper form.
    </string>
    <string name="db_bench_press">
        <b>Setup:</b> Sit on a flat bench with a dumbbell in each hand.Place the dumbbells on your knees.
        Carefully lie back on the bench, keeping the dumbbells close to your chest.\n
        <b>Grip:</b>Hold one dumbbell in each hand.Position the dumbbells at shoulder width, with your palms facing forward.\n
        <b>Positioning:</b>Press the dumbbells up above your chest.Keep your feet flat on the ground and your back on the bench.Maintain a slight arch in your lower back.\n
        <b>Descent:</b>Slowly lower the dumbbells to the sides of your chest.Keep your elbows at a 90-degree angle, creating a right angle with your upper arms parallel to the ground.\n
        <b>Ascent:</b>Push the dumbbells back up to the starting position.Fully extend your arms without locking your elbows.\n
        <b>Breathing:</b>Inhale as you lower the dumbbells.Exhale as you push them back up.
    </string>
    <string name="db_incline_bench_press">
        <b>Setup:</b> Adjust an incline bench to about a 30-45 degree angle. Sit on the bench with your back firmly against the padding, feet flat on the floor.\n
        <b>Grip:</b>Pick up a dumbbell in each hand. Start with a weight that allows you to maintain proper form.\n
        <b>Positioning:</b>With the dumbbells in hand, lie back on the bench. Hold the dumbbells at shoulder level with your palms facing away from you. Your elbows should be bent and aligned with your shoulders.\n
        <b>Descent:</b>Exhale as you push the dumbbells upward, extending your arms fully but without locking your elbows. Keep your wrists firm and the weights stable throughout the movement.\n
        <b>Ascent:</b>Push the dumbbells back up to the starting position.Fully extend your arms without locking your elbows.\n
        <b>Breathing:</b>Inhale as you lower the dumbbells.Exhale as you push them back up.

    </string>
    <string name="db_decline_bench_press">
        <b>Setup:</b> Adjust the decline bench to the desired angle (usually around 30-45 degrees). \n
        <b>Grip:</b>Sit at the end of the bench, holding a dumbbell in each hand. Start with a weight that allows you to maintain proper form.\n
        <b>Positioning:</b>Carefully lie back on the bench, keeping your feet secured in the leg pads. Position the dumbbells above your chest, arms extended, palms facing forward.\n
        <b>Descent:</b>Lower the dumbbells slowly and with control, allowing your elbows to bend. Keep your upper arms at about a 45-degree angle to your body.\n
        <b>Ascent:</b>Push the dumbbells back up to the starting position, extending your arms fully without locking your elbows.\n
        <b>Breathing:</b>Inhale as you lower the dumbbells.Exhale as you push them back up.



    </string>
    <string name="db_flyes">
        <b>Setup:</b>  Lie down on a flat bench with a dumbbell in each hand. \n
        <b>Grip:</b>Extend your arms above your chest, palms facing each other. Bend your elbows slightly to maintain a soft lock in your arms.\n
        <b>Positioning:</b>Keep a slight bend in your elbows and slowly open your arms in a wide arc motion, lowering the dumbbells out to the sides until you feel a stretch in your chest.\n
        <b>Descent:</b>Lower the dumbbells slowly and with control, allowing your elbows to bend. Keep your upper arms at about a 45-degree angle to your body.\n
        <b>Ascent:</b>Push the dumbbells back up to the starting position, extending your arms fully without locking your elbows.\n
        <b>Breathing:</b>Inhale as you lower the dumbbells.Exhale as you push them back up.




    </string>
    <string name="dips">
        <b>Find a Dip Station:</b>Locate parallel bars or a dip station that is sturdy and secure.\n
        <b>Starting Position:</b>Stand between the bars and grab each bar with your palms facing inward.Lift yourself up so your arms are fully extended.\n
        <b>Lowering Phase:</b>Lower your body by bending your elbows while leaning slightly forward.\n
        <b>Pushing Phase:</b>Push through your palms and straighten your arms to lift your body back up to the starting position.\n



    </string>
    <string name="shoulder_day">Shoulder Day</string>
    <string name="pike_pushup">Pike PushUp</string>
    <string name="dumbbell_shoulder_press">Dumbbell Shoulder Press</string>
    <string name="lateral_raise">Lateral Raise</string>
    <string name="front_raises">Front Raises</string>
    <string name="reverse_flyes">Reverse Flyes</string>
    <string name="bodyweight_shoulder_tap">BodyWeight Shoulder Tap</string>
    <string name="title_activity_reverse_flyes">ReverseFlyes</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>