<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_detail">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/wave"
        android:contentDescription="@string/wave"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/besleybold"
        android:text="@string/account_setup"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.483">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"

            >

            <TextView
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/besley"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp"


                android:textStyle="bold">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/inputName"
                android:textColorHint="@color/light_grey"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:autofillHints="false"
                android:inputType="text"
                android:hint="@string/aryan_raj"
                android:layout_weight="1"
                android:fontFamily="@font/besley"


                android:background="@drawable/edit_text_bg"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="0"

                android:fontFamily="@font/besley"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:id="@+id/femaleIv"
                android:layout_weight="1"
                android:contentDescription="@string/female_icon"
                android:src="@drawable/female"
                >
            </ImageView>

            <ImageView
                android:id="@+id/maleIv"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:contentDescription="@string/male_icon"
                android:src="@drawable/male">

            </ImageView>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/besley"
                android:text="@string/age"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold">

            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/inputAge"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:autofillHints="false"
                android:inputType="number"
                android:hint="@string/in_years"
                android:textColorHint="@color/light_grey"
                android:layout_weight="1"
                android:fontFamily="@font/besley"
                android:background="@drawable/edit_text_bg"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/besley"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="20sp"

                android:textStyle="bold">

            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/inputWeight"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:autofillHints="false"
                android:inputType="number"
                android:textColorHint="@color/light_grey"
                android:hint="@string/in_kg"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/besley"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/besley"
                android:text="@string/goal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/inputGoal"
                android:layout_weight="1"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/finishBtn"
                android:layout_width="311dp"
                android:layout_height="48dp"
                android:text="@string/finish"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:fontFamily="@font/besley"
                android:textAllCaps="false"
                android:textStyle="bold"
                />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>