<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">


        

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/wave"
        android:scaleType="centerInside"
        android:contentDescription="@string/wave"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </ImageView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/besleybold"
        android:padding="3dp"
        android:text="@string/hi_please_login"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="25sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/besley"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="20sp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:fontFamily="@font/besley"
            android:hint="@string/hintEmail"
            android:autofillHints="false"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="19sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:fontFamily="@font/besley"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="20sp"
            android:background="@drawable/edit_text_bg"
            android:ems="10"
            android:hint="@string/hintPassword"
            android:autofillHints="false"
            android:inputType="numberPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="19sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/besley"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold">

        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:id="@+id/signupTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="@string/signup_here"
            android:textColor="@color/light_grey">

        </TextView>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>